verdaccio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verdaccio-registry
  namespace: verdaccio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verdaccio
  template:
    metadata:
      labels:
        app: verdaccio
    spec:
      containers:
        - name: verdaccio
          image: verdaccio/verdaccio:6.2
          ports:
            - containerPort: 4873
          volumeMounts:
            - name: storage
              mountPath: /verdaccio/storage
            - name: config
              mountPath: /verdaccio/conf/config.yaml
              subPath: config.yaml
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: verdaccio-pvc
        - name: config
          configMap:
            name: verdaccio-config
