verdaccio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verdaccio-service
  namespace: verdaccio
spec:
  selector:
    app: verdaccio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4873
  type: ClusterIP
