verdaccio/ingress-route.yaml
# ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: verdaccio-ingressroute
  namespace: verdaccio
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`verdaccio.mw.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: verdaccio-service
          port: 80
  tls:
    secretName: verdaccio-tls-secret
